# labzero

./: .gitpod.Dockerfile  LICENSE.txt  README.md  cookiecutter.json  docker-compose.yml
.docker/: devdb.sh
docs/: cookiecutter.md  fe.md  gitpod.md  nvm.md  pipx.md  poetry.md  tailwind.md  tutorial.md  zero.md
{{cookiecutter.project_name}}/: .env.example  .gitpod.Dockerfile  Dockerfile  docker-compose.yml  package.json  pyproject.toml  render.yaml  tailwind.config.js  webpack.mix.js
{{cookiecutter.project_name}}/.docker/: devdb.sh
{{cookiecutter.project_name}}/.render/: run.sh
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: settings.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: settings.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/templates/: base.html  index.html
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/templatetags/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_name}}/sub-src/{{cookiecutter.project_name}}_cli/: setup.py
{{cookiecutter.project_name}}/sub-src/{{cookiecutter.project_name}}_cli/{{cookiecutter.project_name}}_cli/: __init__.py
{{cookiecutter.project_name}}/sub-src/{{cookiecutter.project_slug}}_cli/: setup.py
{{cookiecutter.project_name}}/sub-src/{{cookiecutter.project_slug}}_cli/{{cookiecutter.project_slug}}_cli/: __init__.py
