[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.project_author_name}} <{{cookiecutter.project_author_email}}>"]
license = "MIT"

packages = [
    { include = "{{cookiecutter.project_name}}", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
{{cookiecutter.project_name}}-cli = {path = "sub-src/{{cookiecutter.project_name}}_cli", develop = true}
click = "^8.1.0"
django-environ = "^0.8.1"
djangomix = "^1.1.3"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
django-extensions = "^3.1.5"
django-debug-toolbar = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
